--- a/library.properties
+++ b/library.properties
@@ -6,5 +6,5 @@ sentence=pdi framework stack for easy configurable applications
 paragraph=pdi framework includes all services like gpio, wifi, http, mqtt, ntp, ota, napt, espnow, mesh, server etc. which are ready to use in all applications
 category=Other
 url=https://github.com/Suraj151/esp8266-framework
-architectures=esp8266
+architectures=esp8266,esp32
 dot_a_linkage=true
