--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=1.1.6
 author=Suraj I.
 maintainer=Suraj I. <surajinamdar151@gmail.com>
 sentence=pdi framework stack for easy configurable applications
-paragraph=pdi framework includes all services like gpio, wifi, http, mqtt, ntp, ota, napt, espnow, mesh, server etc. which are ready to use in all applications
+paragraph=pdi framework includes all services like gpio, wifi, cmd, mqtt, ntp, ota, napt, http server etc. which are ready to use in all applications
 category=Other
 url=https://github.com/Suraj151/pdi-framework
 architectures=avr,esp8266,esp32
