--- a/library.properties
+++ b/library.properties
@@ -1,8 +1,8 @@
 name=pdi-framework
-version=1.1.6
+version=1.1.7
 author=Suraj I.
 maintainer=Suraj I. <surajinamdar151@gmail.com>
-sentence=pdi framework stack for easy configurable applications
+sentence=Portable Device Interface (PDI) framework stack for easy configurable applications running over avr, esp devices. Designed to easily enable/disable services such as WiFi, HTTP, MQTT, SSH server, Telnet server, OTA, GPIO, Serial, and much more.
 paragraph=pdi framework includes all services like gpio, wifi, cmd, mqtt, ntp, ota, napt, http server, telnet, ssh server etc. which are ready to use in all applications
 category=Other
 url=https://github.com/Suraj151/pdi-framework
